test/Transforms/Flattening/instantiate_structs_fail.llzk
// RUN: llzk-opt -I %S -split-input-file -llzk-flatten -verify-diagnostics %s

module attributes {veridise.lang = "llzk"} {
  struct.def @Unpack<[@N, @P, @Aff]> {
    function.def @compute(%arg0: !array.array<@Aff x !felt.felt>) -> !struct.struct<@Unpack<[@N, @P, @Aff]>> {
      %self = struct.new : !struct.struct<@Unpack<[@N, @P, @Aff]>>
      function.return %self : !struct.struct<@Unpack<[@N, @P, @Aff]>>
    }
    function.def @constrain(%arg0: !struct.struct<@Unpack<[@N, @P, @Aff]>>, %arg1: !array.array<@Aff x !felt.felt>) { function.return }
  }
  struct.def @User1 {
    function.def @compute() -> !struct.struct<@User1> {
      %0 = felt.const 42
      %1 = felt.const 99

      %arr = array.new %0, %1 : !array.array<2 x !felt.felt>
      %a = arith.constant 8 : index
      %b = arith.constant 2 : index
      // expected-error@+1 {{'function.call' op operand type mismatch: expected type '!array.array<4 x !felt.felt>', but found '!array.array<2 x !felt.felt>' for operand number 0}}
      %s = function.call @Unpack::@compute(%arr) {()[%a, %b]}
        : (!array.array<2 x !felt.felt>) -> !struct.struct<@Unpack<[8, 2, affine_map<()[s0, s1] -> (s0 floordiv s1)>]>>
      %self = struct.new : !struct.struct<@User1>
      function.return %self : !struct.struct<@User1>
    }
    function.def @constrain(%arg0: !struct.struct<@User1>) { function.return }
  }
}
